--- a/assets/paginas/picoles.html
+++ b/assets/paginas/picoles.html
@@ -19,33 +19,34 @@
      target="_blank" 
      rel="noopener noreferrer" 
      aria-label="Acesse nosso Instagram (abre em nova aba)">
-    <img src="/assets/images/instagram_fixo.svg" alt="" >
+    <img src="/assets/images/instagram_fixo.svg" alt=" " role="presentation">
   </a>
 </div>
   <!-- Navbar desktop -->
 <header class="navbar">
     <div class="logo">
-      <img src="/assets/images/logo-havana.png" alt="">
+      <img src="/assets/images/logo-havana.png" alt=" " role="presentation">
     </div>
 
     <nav class="nav-links">
       <ul>
-        <li><a href="index.html">Início</a></li>
+        <li><a href="/index.html">Início</a></li>
         <li>
           <div class="dropdown">
-            <button class="dropbtn" id="btndrop-desktop">
-              Cardápio <i class="fa fa-caret-down"></i>
-            </button>
+           <button class="dropbtn"id="btndrop-desktop"aria-expanded="false"aria-controls="dropdown-desktop">
+           Cardápio 
+          <i class="fa fa-caret-down" aria-hidden="true"></i>
+          </button>
             <nav id="dropdown-desktop" class="dropdown-content">
-              <a href="assets/paginas/gelatos.html">Gelatos</a>
-              <a href="assets/paginas/picoles.html">Picolés</a>
-              <a href="assets/paginas/paletas.html">Paletas</a>
-              <a href="assets/paginas/outros.html">Outros</a>
+              <a href="/assets/paginas/gelatos.html">Gelatos</a>
+              <a href="/assets/paginas/picoles.html">Picolés</a>
+              <a href="/assets/paginas/paletas.html">Paletas</a>
+              <a href="/assets/paginas/outros.html">Outros</a>
             </nav>
           </div>
         </li>
         <li><a href="/index.html#sobre">Sobre</a></li>
-        <li><a href="assets/paginas/contato.html" target="_blank">Contato</a></li>
+        <li><a href="/assets/paginas/contato.html">Contato</a></li>
       </ul>
     </nav>
   </header>
@@ -54,28 +55,28 @@
   <nav class="menu-responsivo">
     <div class="separando-logos">
       <div class="logo">
-        <img src="../images/logo-havana.png" alt="">
+        <img src="../images/logo-havana.png" alt=" " role="presentation">
       </div>
       <div class="menu" id="icon-menu"><i class="fas fa-bars"></i></div>
     </div>
 
     <div class="navegacao-responsivo" id="links-nav">
       <ul>
-        <li><a href="../../index.html">Início</a></li>
+        <li><a href="/index.html">Início</a></li>
         <li>
           <div class="dropdown">
             <button class="dropbtn" id="btndrop-mobile">
               Cardápio <i class="fa fa-caret-down"></i>
             </button>
             <nav id="dropdown-mobile" class="dropdown-content">
-              <a href="../paginas/gelatos.html">Gelatos</a>
-              <a href="../paginas/picoles.html">Picolés</a>
-              <a href="../paginas/paletas.html">Paletas</a>
-              <a href="../paginas/outros.html">Outros</a>
+             <a href="assets/paginas/gelatos.html">Gelatos</a>
+              <a href="assets/paginas/picoles.html">Picolés</a>
+              <a href="assets/paginas/paletas.html">Paletas</a>
+              <a href="assets/paginas/outros.html">Outros</a>
             </nav>
           </div>
         </li>
-        <li><a href="../../index.html#sobre">Sobre</a></li>
+        <li><a href="/index.html#sobre">Sobre</a></li>
         <li><a href="/assets/paginas/contato.html">Contato</a></li>
       </ul>
     </div>
@@ -187,7 +188,7 @@
       </figure>
 
       <figure class="produtos-img_fundo-pronto">
-        <img src="../images/Picole-de-maracuja.avif" alt="Descrição da foto 1">
+        <img src="../images/Picole-de-maracuja.avif" alt="sorvete no palito de maracuja">
 
         <div class="textos-produto-p">
           <figcaption>Maracujá</figcaption>
@@ -245,7 +246,7 @@
   <footer>
     <div class="footer-container">
       <div class="footer-logo">
-        <img src="/assets/images/logo-havana.png" alt="">
+        <img src="/assets/images/logo-havana.png" alt=" " role="presentation">
       </div>
 
       <div class="footer-section">
@@ -289,7 +290,7 @@
       </div>
     </footer>
     
-  <script src="../JavaScript/script.js"></script>
+  <script src="/assets/JavaScript/script.js"></script>
 </body>
 
 </html>
