--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
      target="_blank" 
      rel="noopener noreferrer" 
      aria-label="Acesse nosso Instagram (abre em nova aba)">
-    <img src="/assets/images/instagram_fixo.svg" alt="" >
+    <img src="/assets/images/instagram_fixo.svg" alt=" " role="presentation">
   </a>
 </div>
 
@@ -94,7 +94,7 @@
   <!-- Navbar desktop -->
   <header class="navbar">
     <div class="logo">
-      <img  src="/assets/images/logo-havana.png" alt="">
+      <img  src="/assets/images/logo-havana.png" alt=" " role="presentation">
     </div>
 
     <nav class="nav-links">
@@ -115,7 +115,7 @@
           </div>
         </li>
         <li><a href="#sobre">Sobre</a></li>
-        <li><a href="assets/paginas/contato.html" target="_blank">Contato</a></li>
+        <li><a href="assets/paginas/contato.html" >Contato</a></li>
       </ul>
     </nav>
   </header>
@@ -124,7 +124,7 @@
   <nav class="menu-responsivo">
     <div class="separando-logos">
       <div class="logo">
-        <img src="/assets/images/logo-havana.png" alt="">
+        <img src="/assets/images/logo-havana.png" alt=" " role="presentation">
       </div>
       <div class="menu" id="icon-menu"><i class="fas fa-bars"></i></div>
     </div>
@@ -158,16 +158,16 @@
     <div class="slider">
       <div class="slides">
         <div class="slide">
-          <img src="assets/images/slides1-passarela-frente-caixa.jpg" alt="Interior limpo e iluminado da Gelateria Havana, mostrando o balcão self-service de gelatos e a área de buffet.">
+          <img src="assets/images/slides1-passarela-frente-caixa.jpg" alt="Imagem representa área interna, com mesas e cadeiras e o balcão de atendimento.">
         </div>
         <div class="slide">
-          <img src="assets/images/slides2-passarela-frente-caixa.avif" alt="Vista interna da sorveteria, com balcão de buffet em granito, freezer de açaí e área de mesas prontas para o atendimento.">
+          <img src="assets/images/slides2-passarela-frente-caixa.avif" alt="com balcão de buffet, freezer de açaí e área de mesas.">
         </div>
         <div class="slide">
-          <img src="assets/images/slide3-vistadedentro-para-fora.avif" alt="Vista de dentro da loja, mostrando as mesas internas com vista para a orla marítima, coqueiros e praia.">
+          <img src="assets/images/slide3-vistadedentro-para-fora.avif" alt="Dentro para mostrando as mesas internas com vista para a praia.">
         </div>
         <div class="slide">
-          <img src="assets/images/slide4-vista-das-coberturas.avif"  alt="Vista do balcão de coberturas e caldas no sel-service da gelateria muitas cubas de diversos sabores marshmallows, chocolates e frutas">
+          <img src="assets/images/slide4-vista-das-coberturas.avif"  alt="Vista do balcão de coberturas e caldas no sel-service da gelateria Havana.">
         </div>
       </div>
 
@@ -201,8 +201,7 @@
       <div class="produtos-grid">
         <figure class="produto">
           <a href="assets/paginas/gelatos.html" style="display: block" aria-label="Gelatos: Clique para Conhecer Mais">
-          <img src="assets/images/sorvete-artesanal-galeria.jpg"
-            alt="Gelato self-service com caldas e confeitos">
+          <img src="assets/images/sorvete-artesanal-galeria.jpg" alt="gelato self-service" role="presentation">
           <figcaption>
             <h3>Gelatos</h3>
             <p>Conheça Mais</p>
@@ -213,8 +212,7 @@
 <!-- ITEM 2: PICOLÉS (CORRIGIDO) -->
     <figure class="produto">
         <a href="assets/paginas/picoles.html" style="display: block; text-decoration: none;" aria-label="Picolés: Conheça mais sobre a coleção">
-            <img src="assets/images/picoles-galeria.avif"
-                alt="foto de varios picoles de varios sabores vendidos um do lado do outro">
+            <img src="assets/images/picoles-galeria.avif" alt="picoles" role="presentation">
             <figcaption>
                 <h3>Picolés</h3>
                 <p>Conheça Mais</p>
@@ -225,8 +223,7 @@
     <!-- ITEM 3: PALETAS (CORRIGIDO) -->
     <figure class="produto">
         <a href="assets/paginas/paletas.html" style="display: block; text-decoration: none;" aria-label="Paletas: Conheça mais sobre os sabores cremosos">
-            <img src="assets/images/Palletas-galeria.avif"
-                alt="foto de duas palletas estilo de picolé com recheio cremoso uma tem recheio de chocolate e por fora chocolate e a outra tem recheio de bombom de chocolate e por fora sorvete de chocolate branco">
+            <img src="assets/images/Palletas-galeria.avif" alt="paletas mexicanas" role="presentation">
             <figcaption>
                 <h3>Paletas</h3>
                 <p>Conheça Mais</p>
@@ -236,9 +233,8 @@
 
     <!-- ITEM 4: MILK SHAKE (CORRIGIDO) -->
     <figure class="produto">
-        <a href="assets/paginas/outros.html" style="display: block; text-decoration: none;" aria-label="Milk Shake: Veja as opções de sabores">
-            <img src="assets/images/milkshake-galeria.avif"
-                alt="foto de um copo de vidro com milk shake de morango dentro do copo e um sorvete de creme com um canudo de plastico">
+        <a href="assets/paginas/outros.html#milkshake" style="display: block; text-decoration: none;" aria-label="Milk Shake: Veja as opções de sabores">
+            <img src="assets/images/milkshake-galeria.avif" alt="milk-shake (leite com sorvete)" role="presentation">
             <figcaption>
                 <h3>Milk Shake</h3>
                 <p>Conheça Mais</p>
@@ -248,9 +244,8 @@
 
     <!-- ITEM 5: PETIT GATEAU (CORRIGIDO) -->
     <figure class="produto">
-        <a href="assets/paginas/outros.html" style="display: block; text-decoration: none;" aria-label="Petit Gateau: Saiba mais sobre essa sobremesa">
-            <img src="assets/images/petit-gateau-galeria.avif"
-                alt="foto de um petit gateau que é um bolo pequeno com com calda de chocolate e sorvete de creme" >
+        <a href="assets/paginas/outros.html#petit_gateau" style="display: block; text-decoration: none;" aria-label="Petit Gateau: Saiba mais sobre essa sobremesa">
+            <img src="assets/images/petit-gateau-galeria.avif" alt="petit gateau (bolo com sorvete)" role="presentation">
             <figcaption>
                 <h3>Petit Gateau</h3>
                 <p>Conheça Mais</p>
@@ -260,9 +255,8 @@
 
     <!-- ITEM 6: BANANA SPLIT (CORRIGIDO) -->
     <figure class="produto">
-        <a href="assets/paginas/outros.html" style="display: block; text-decoration: none;" aria-label="Banana Split: Descubra os detalhes dessa sobremesa">
-            <img src="assets/images/bananasplit-galeria.avif"
-                alt="foto de um banana split que é uma sobremesa com banana, sorvete de creme, chocolate e calda de morango e chantilly com cerejas e canudos de baunilha" >
+        <a href="assets/paginas/outros.html#bananasplit" style="display: block; text-decoration: none;" aria-label="Banana Split: Descubra os detalhes dessa sobremesa">
+            <img src="assets/images/bananasplit-galeria.avif" alt="banana split sorvete com banana" role="presentation">
             <figcaption>
                 <h3>Banana Split</h3>
                 <p>Conheça Mais</p>
@@ -272,9 +266,8 @@
 
     <!-- ITEM 7: POTE DE 1,5 LITROS (CORRIGIDO) -->
     <figure class="produto">
-        <a href="assets/paginas/outros.html" style="display: block; text-decoration: none;" aria-label="Para Viagem: Conheça mais sobre Potes de 1,5 litros">
-            <img src="assets/images/para-viagem-galeria.avif"
-                alt="foto de potes de sorvete para viagem na quantidade de 1,5 litros em vários sabores" >
+        <a href="assets/paginas/outros.html#pote" style="display: block; text-decoration: none;" aria-label="Para Viagem: Conheça mais sobre Potes de 1,5 litros">
+            <img src="assets/images/para-viagem-galeria.avif" alt="pote para viagem" role="presentation">
             <figcaption>
                 <h3>Pote de 1,5 litros</h3>
                 <p>Conheça Mais</p>
@@ -284,9 +277,8 @@
 
     <!-- ITEM 8: CASQUINHA E CASCÃO (CORRIGIDO) -->
     <figure class="produto">
-        <a href="assets/paginas/outros.html" style="display: block; text-decoration: none;" aria-label="Casquinha e cascão: Veja opções de sabores">
-            <img src="assets/images/cascao-galeria.avif"
-                alt="foto de um cascão de uma bola no sabor da fruta pitaya na cor roxa forte" >
+        <a href="assets/paginas/outros.html#cascao" style="display: block; text-decoration: none;" aria-label="Casquinha e cascão: Veja opções de sabores">
+            <img src="assets/images/cascao-galeria.avif" alt="cascao de uma bola de sorvete" role="presentation">
             <figcaption>
                 <h3>Casquinha e cascão</h3>
                 <p>Conheça Mais</p>
@@ -296,9 +288,8 @@
 
     <!-- ITEM 9: AÇAÍ (CORRIGIDO) -->
     <figure class="produto">
-        <a href="assets/paginas/outros.html" style="display: block; text-decoration: none;" aria-label="Açaí: Conheça mais sobre as opções de açaí">
-            <img src="assets/images/acai-galeria.avif"
-                alt="foto de um acai tradicional com frutas como banana, kiwi e morango" >
+        <a href="assets/paginas/outros.html#acai" style="display: block; text-decoration: none;" aria-label="Açaí: Conheça mais sobre as opções de açaí">
+            <img src="assets/images/acai-galeria.avif" alt="açaí na tigela" role="presentation">
             <figcaption>
                 <h3>Açaí</h3>
                 <p>Conheça Mais</p>
@@ -313,7 +304,7 @@
     <section id="sobre" class="sobre-container">
 
       <h2 class="sobre-container">Sobre</h2>
-      <img src="assets/images/nova_frente-da-gelateria-havana.avif" width="700" height="366" alt="Fachada de esquina da Sorveteria Havana, vista à noite, com as placas iluminadas e mesas na calçada prontas para clientes." class="exterior">
+      <img src="assets/images/nova_frente-da-gelateria-havana.avif" width="700" height="366" alt="Fachada de esquina da Sorveteria Havana, vista à noite." class="exterior">
         
         <div class="texto-sobre texto-colapsado" id="textoSobre">
 
@@ -354,8 +345,8 @@
       <h2>Curiosidades</h2>
  
         <div class="motions">
-          <img src="assets/images/gelato.png" alt="" class="motion">
-          <img src="assets/images/sorvete.png" alt="" class="motion">
+          <img src="assets/images/gelato.png" alt="imagem do gelato cremoso" class="motion">
+          <img src="assets/images/sorvete.png" alt="imagem do sorvete duro" class="motion">
         </div>
 
 <div>
@@ -416,7 +407,7 @@
    <footer>
     <div class="footer-container">
       <div class="footer-logo">
-        <img src="/assets/images/logo-havana.png" alt="">
+        <img src="/assets/images/logo-havana.png" alt=" " role="presentation">
       </div>
 
       <div class="footer-section">
