--- a/assets/paginas/gelatos.html
+++ b/assets/paginas/gelatos.html
@@ -23,28 +23,29 @@
      target="_blank" 
      rel="noopener noreferrer" 
      aria-label="Acesse nosso Instagram (abre em nova aba)">
-    <img src="/assets/images/instagram_fixo.svg" alt="" >
+    <img src="/assets/images/instagram_fixo.svg" alt=" " role="presentation">
   </a>
 </div>
   <!-- Navbar desktop -->
   <header class="navbar">
     <div class="logo">
-      <img src="../images/logo-havana.png" alt="">
+      <img src="../images/logo-havana.png" alt=" " role="presentation">
     </div>
 
-    <nav class="nav-links">
+   <nav class="nav-links">
       <ul>
-        <li><a href="../../index.html">Início</a></li>
+        <li><a href="/index.html">Início</a></li>
         <li>
           <div class="dropdown">
-            <button class="dropbtn" id="btndrop-desktop">
-              Cardápio <i class="fa fa-caret-down"></i>
-            </button>
+           <button class="dropbtn"id="btndrop-desktop"aria-expanded="false"aria-controls="dropdown-desktop">
+           Cardápio 
+          <i class="fa fa-caret-down" aria-hidden="true"></i>
+          </button>
             <nav id="dropdown-desktop" class="dropdown-content">
-              <a href="../paginas/gelatos.html">Gelatos</a>
-              <a href="../paginas/picoles.html">Picolés</a>
-              <a href="../paginas/paletas.html">Paletas</a>
-              <a href="../paginas/outros.html">Outros</a>
+              <a href="/assets/paginas/gelatos.html">Gelatos</a>
+              <a href="/assets/paginas/picoles.html">Picolés</a>
+              <a href="/assets/paginas/paletas.html">Paletas</a>
+              <a href="/assets/paginas/outros.html">Outros</a>
             </nav>
           </div>
         </li>
@@ -58,29 +59,29 @@
   <nav class="menu-responsivo">
     <div class="separando-logos">
       <div class="logo">
-        <img src="../images/logo-havana.png" alt="">
+        <img src="../images/logo-havana.png" alt=" " role="presentation">
       </div>
       <div class="menu" id="icon-menu"><i class="fas fa-bars"></i></div>
     </div>
 
     <div class="navegacao-responsivo" id="links-nav">
       <ul>
-        <li><a href="../../index.html">Início</a></li>
+        <li><a href="/index.html">Início</a></li>
         <li>
           <div class="dropdown">
             <button class="dropbtn" id="btndrop-mobile">
               Cardápio <i class="fa fa-caret-down"></i>
             </button>
             <nav id="dropdown-mobile" class="dropdown-content">
-              <a href="../paginas/gelatos.html">Gelatos</a>
-              <a href="../paginas/picoles.html">Picolés</a>
-              <a href="../paginas/paletas.html">Paletas</a>
-              <a href="../paginas/outros.html">Outros</a>
+              <a href="/assets/paginas/gelatos.html">Gelatos</a>
+              <a href="/assets/paginas/picoles.html">Picolés</a>
+              <a href="/assets/paginas/paletas.html">Paletas</a>
+              <a href="/assets/paginas/outros.html">Outros</a>
             </nav>
           </div>
         </li>
         <li><a href="/index.html#sobre">Sobre</a></li>
-        <li><a href="../paginas/contato.html">Contato</a></li>
+        <li><a href="/assets/paginas/contato.html">Contato</a></li>
       </ul>
     </div>
   </nav>
@@ -576,7 +577,7 @@
       </figure>
 
       <figure class="produtos-img_fundo ocultar">
-        <img src="../images/Gelato_Trufa.webp" alt="sabor do gelato de trufa que é de chocolate ao leite e branco com pedaços de chocolates">
+        <img src="../images/Gelato_Trufa.webp" alt="gelato de trufa que é de chocolate ao leite e branco com pedaços de chocolates">
 
         <div class="textos-produto">
           <figcaption>Trufa</figcaption>
@@ -628,7 +629,7 @@
   <footer>
     <div class="footer-container">
       <div class="footer-logo">
-        <img src="/assets/images/logo-havana.png" alt="">
+        <img src="/assets/images/logo-havana.png" alt=" " role="presentation">
       </div>
 
       <div class="footer-section">
@@ -672,7 +673,7 @@
       </div>
     </footer>
     
-  <script src="../JavaScript/script.js"></script>
+  <script src="/assets/JavaScript/script.js"></script>
 </body>
 
 </html>
