--- a/assets/paginas/outros.html
+++ b/assets/paginas/outros.html
@@ -19,33 +19,34 @@
      target="_blank" 
      rel="noopener noreferrer" 
      aria-label="Acesse nosso Instagram (abre em nova aba)">
-    <img src="/assets/images/instagram_fixo.svg" alt="" >
+    <img src="/assets/images/instagram_fixo.svg" alt=" " role="presentation" >
   </a>
 </div>
   <!-- Navbar desktop -->
   <header class="navbar">
     <div class="logo">
-      <img src="../images/logo-havana.png" alt="">
+      <img src="../images/logo-havana.png" alt=" " role="presentation">
     </div>
 
     <nav class="nav-links">
       <ul>
-        <li><a href="../../index.html">Início</a></li>
+        <li><a href="/index.html">Início</a></li>
         <li>
           <div class="dropdown">
-            <button class="dropbtn" id="btndrop-desktop">
-              Cardápio <i class="fa fa-caret-down"></i>
-            </button>
+           <button class="dropbtn"id="btndrop-desktop"aria-expanded="false"aria-controls="dropdown-desktop">
+           Cardápio 
+          <i class="fa fa-caret-down" aria-hidden="true"></i>
+          </button>
             <nav id="dropdown-desktop" class="dropdown-content">
-              <a href="../paginas/gelatos.html">Gelatos</a>
-              <a href="../paginas/picoles.html">Picolés</a>
-              <a href="../paginas/paletas.html">Paletas</a>
-              <a href="../paginas/outros.html">Outros</a>
+              <a href="assets/paginas/gelatos.html">Gelatos</a>
+              <a href="assets/paginas/picoles.html">Picolés</a>
+              <a href="assets/paginas/paletas.html">Paletas</a>
+              <a href="assets/paginas/outros.html">Outros</a>
             </nav>
           </div>
         </li>
         <li><a href="/index.html#sobre">Sobre</a></li>
-        <li><a href="/assets/paginas/contato.html">Contato</a></li>
+        <li><a href="assets/paginas/contato.html">Contato</a></li>
       </ul>
     </nav>
   </header>
@@ -54,7 +55,7 @@
   <nav class="menu-responsivo">
     <div class="separando-logos">
       <div class="logo">
-        <img src="../images/logo-havana.png" alt="">
+        <img src="../images/logo-havana.png" alt=" " role="presentation">
       </div>
       <div class="menu" id="icon-menu"><i class="fas fa-bars"></i></div>
     </div>
@@ -92,7 +93,7 @@
 
 
 
-      <figure class="produtos-img_fundo ">
+      <figure id="acai" class="produtos-img_fundo ">
         <img src="../images/acai-galeria.avif" 
               alt="Açaí na tigela com morango e manga e leite em po">
         <figcaption>
@@ -104,9 +105,9 @@
         </figcaption>
       </figure>
 
-      <figure class="produtos-img_fundo ">
+      <figure id="banansplit" class="produtos-img_fundo ">
         <img src="../images/bananasplit-galeria.avif"
-             alt="Banana split que é feita com banana, sorvete em baixo, chantilly, canudinhos ded biju e calda de chocolate">
+             alt="Banana split que é feita com banana sorvete e calda de chocolate">
         <figcaption>
           <h3 class="before_figcaption">Banana Split</h3>
           <div class="textos-produto">
@@ -116,7 +117,7 @@
         </figcaption>
       </figure>
 
-      <figure class="produtos-img_fundo ">
+      <figure id="cascao" class="produtos-img_fundo ">
         <img src="../images/cascao-galeria.avif" 
             alt="cascao com uma bola de gelato de pistache">
         <figcaption>
@@ -128,9 +129,9 @@
         </figcaption>
       </figure>
 
-      <figure class="produtos-img_fundo ">
+      <figure id="milkshake" class="produtos-img_fundo ">
         <img src="../images/milkshake-galeria.avif"
-          alt="milk shake que é sorvete batido com leite e com canudo e cobrtura">
+          alt="milk shake que é sorvete batido com leite e com canudo e cobertura">
 
         <figcaption>
           <h3 class="before_figcaption">Milk shake</h3>
@@ -141,7 +142,7 @@
         </figcaption>
       </figure>
 
-      <figure class="produtos-img_fundo ">
+      <figure id="petit_gateau" class="produtos-img_fundo ">
         <img src="../images/petit-gateau-galeria.avif"
               alt="petit gateau com gelato sabor de creme e calda de chocolate em cima">
           <figcaption>
@@ -153,9 +154,9 @@
         </figcaption>
       </figure>
 
-      <figure class="produtos-img_fundo ">
+      <figure id="porkg" class="produtos-img_fundo ">
         <img src="../images/sorvete-artesanal-galeria.jpg"
-          alt="pote individual de gelato por kg com varios sabores com cobeertura e acompanhamentos">
+          alt="pote individual de gelato por kg com varios sabores com cobertura e acompanhamentos">
           <figcaption>
             <h3 class="before_figcaption">Gelatos Self-service</h3>
           <div class="textos-produto">
@@ -166,7 +167,7 @@
         </figcaption>
       </figure>
 
-      <figure class="produtos-img_fundo ">
+      <figure id="pote" class="produtos-img_fundo ">
         <img src="../images/para-viagem-galeria.avif" 
              alt="Varios potes de gelato de 1 litro e meio de diversos sabores">
         <figcaption>
@@ -179,7 +180,7 @@
         </figcaption>
       </figure>
 
-      <figure class="produtos-img_fundo ">
+      <figure id="diet" class="produtos-img_fundo ">
         <img src="../images/Gelato-diet.webp" 
              alt="Imagem do gelato diet">
 
@@ -203,7 +204,7 @@
   <footer>
     <div class="footer-container">
       <div class="footer-logo">
-        <img src="/assets/images/logo-havana.png" alt="">
+        <img src="/assets/images/logo-havana.png" alt=" " role="presentation">
       </div>
 
       <div class="footer-section">
