--- a/assets/paginas/paletas.html
+++ b/assets/paginas/paletas.html
@@ -20,33 +20,34 @@
      target="_blank" 
      rel="noopener noreferrer" 
      aria-label="Acesse nosso Instagram (abre em nova aba)">
-    <img src="/assets/images/instagram_fixo.svg" alt="" >
+    <img src="/assets/images/instagram_fixo.svg" alt=" " role="presentation">
   </a>
 </div>
   <!-- Navbar desktop -->
   <header class="navbar">
     <div class="logo">
-      <img src="../images/logo-havana.png" alt="">
+      <img src="../images/logo-havana.png" alt=" " role="presentation">
     </div>
 
     <nav class="nav-links">
       <ul>
-        <li><a href="../../index.html">Início</a></li>
+        <li><a href="/index.html">Início</a></li>
         <li>
           <div class="dropdown">
-            <button class="dropbtn" id="btndrop-desktop">
-              Cardápio <i class="fa fa-caret-down"></i>
-            </button>
+           <button class="dropbtn"id="btndrop-desktop"aria-expanded="false"aria-controls="dropdown-desktop">
+           Cardápio 
+          <i class="fa fa-caret-down" aria-hidden="true"></i>
+          </button>
             <nav id="dropdown-desktop" class="dropdown-content">
-              <a href="../paginas/gelatos.html">Gelatos</a>
-              <a href="../paginas/picoles.html">Picolés</a>
-              <a href="../paginas/paletas.html">Paletas</a>
-              <a href="../paginas/outros.html">Outros</a>
+              <a href="/assets/paginas/gelatos.html">Gelatos</a>
+              <a href="/assets/paginas/picoles.html">Picolés</a>
+              <a href="/assets/paginas/paletas.html">Paletas</a>
+              <a href="/assets/paginas/outros.html">Outros</a>
             </nav>
           </div>
         </li>
         <li><a href="/index.html#sobre">Sobre</a></li>
-        <li><a href="contato.html">Contato</a></li>
+        <li><a href="/assets/paginas/contato.html">Contato</a></li>
       </ul>
     </nav>
   </header>
@@ -55,24 +56,24 @@
   <nav class="menu-responsivo">
     <div class="separando-logos">
       <div class="logo">
-        <img src="../images/logo-havana.png" alt="">
+        <img src="../images/logo-havana.png" alt=" " role="presentation">
       </div>
       <div class="menu" id="icon-menu"><i class="fas fa-bars"></i></div>
     </div>
 
     <div class="navegacao-responsivo" id="links-nav">
       <ul>
-        <li><a href="../../index.html">Início</a></li>
+        <li><a href="/index.html">Início</a></li>
         <li>
           <div class="dropdown">
             <button class="dropbtn" id="btndrop-mobile">
               Cardápio <i class="fa fa-caret-down"></i>
             </button>
             <nav id="dropdown-mobile" class="dropdown-content">
-              <a href="../paginas/gelatos.html">Gelatos</a>
-              <a href="../paginas/picoles.html">Picolés</a>
-              <a href="../paginas/paletas.html">Paletas</a>
-              <a href="../paginas/outros.html">Outros</a>
+              <a href="/assets/paginas/gelatos.html">Gelatos</a>
+              <a href="/assets/paginas/picoles.html">Picolés</a>
+              <a href="/assets/paginas/paletas.html">Paletas</a>
+              <a href="/assets/paginas/outros.html">Outros</a>
             </nav>
           </div>
         </li>
@@ -182,7 +183,7 @@
   <footer>
     <div class="footer-container">
       <div class="footer-logo">
-        <img src="/assets/images/logo-havana.png" alt="">
+        <img src="/assets/images/logo-havana.png" alt=" " role="presentation">
       </div>
 
       <div class="footer-section">
@@ -226,7 +227,7 @@
       </div>
     </footer>
   
-  <script src="../JavaScript/script.js"></script>
+  <script src="/assets/JavaScript/script.js"></script>
 </body>
 
 </html>
