--- a/assets/paginas/politica-de-privacidade.html
+++ b/assets/paginas/politica-de-privacidade.html
@@ -81,6 +81,6 @@
   <p>Se você tiver dúvidas sobre esta política, entre em contato:</p>
   <p><strong>E-mail:</strong> contato@gelateriahavana.com.br</p>
 
-  <p><em>Última atualização: 11 de julho de 2025</em></p>
+  <p><em>Última atualização: 25 de Novembro 2025</em></p>
 </body>
 </html>
