--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 
 <head>
+  <meta http-equiv="Content-Language" content="pt-BR">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap"  rel="stylesheet">
@@ -72,7 +73,7 @@
      target="_blank" 
      rel="noopener noreferrer" 
      aria-label="Acesse nosso Instagram (abre em nova aba)">
-    <img src="/assets/images/instagram_fixo.svg" alt=" " role="presentation">
+    <img src="/assets/images/instagram_fixo.svg" alt="INSTAGRAM">
   </a>
 </div>
 
@@ -94,7 +95,7 @@
   <!-- Navbar desktop -->
   <header class="navbar">
     <div class="logo">
-      <img  src="/assets/images/logo-havana.png" alt=" " role="presentation">
+      <img  src="/assets/images/logo-havana.png" alt="">
     </div>
 
     <nav class="nav-links">
@@ -124,7 +125,7 @@
   <nav class="menu-responsivo">
     <div class="separando-logos">
       <div class="logo">
-        <img src="/assets/images/logo-havana.png" alt=" " role="presentation">
+        <img src="/assets/images/logo-havana.png" alt="">
       </div>
       <div class="menu" id="icon-menu"><i class="fas fa-bars"></i></div>
     </div>
@@ -158,16 +159,16 @@
     <div class="slider">
       <div class="slides">
         <div class="slide">
-          <img src="assets/images/slides1-passarela-frente-caixa.jpg" alt="Imagem representa área interna, com mesas e cadeiras e o balcão de atendimento.">
+          <img src="assets/images/slides1-passarela-frente-caixa.jpg" alt="Área interna com mesas, cadeiras e o balcão de atendimento.">
         </div>
         <div class="slide">
-          <img src="assets/images/slides2-passarela-frente-caixa.avif" alt="com balcão de buffet, freezer de açaí e área de mesas.">
+          <img src="assets/images/slides2-passarela-frente-caixa.avif" alt="Balcão de buffet, freezer de açaí e área com mesas.">
         </div>
         <div class="slide">
-          <img src="assets/images/slide3-vistadedentro-para-fora.avif" alt="Dentro para mostrando as mesas internas com vista para a praia.">
+          <img src="assets/images/slide3-vistadedentro-para-fora.avif" alt="Vista interna mostrando as mesas e a praia ao fundo.">
         </div>
         <div class="slide">
-          <img src="assets/images/slide4-vista-das-coberturas.avif"  alt="Vista do balcão de coberturas e caldas no sel-service da gelateria Havana.">
+          <img src="assets/images/slide4-vista-das-coberturas.avif"  alt="Balcão de coberturas e caldas do self-service da Gelateria Havana.">
         </div>
       </div>
 
@@ -201,100 +202,100 @@
       <div class="produtos-grid">
         <figure class="produto">
           <a href="assets/paginas/gelatos.html" style="display: block" aria-label="Gelatos: Clique para Conhecer Mais">
-          <img src="assets/images/sorvete-artesanal-galeria.jpg" alt="gelato self-service" role="presentation">
+          <img src="assets/images/sorvete-artesanal-galeria.jpg" alt="gelatos">
+          </a>
           <figcaption>
             <h3>Gelatos</h3>
             <p>Conheça Mais</p>
           </figcaption>
-          </a>
         </figure>
 
 <!-- ITEM 2: PICOLÉS (CORRIGIDO) -->
     <figure class="produto">
         <a href="assets/paginas/picoles.html" style="display: block; text-decoration: none;" aria-label="Picolés: Conheça mais sobre a coleção">
-            <img src="assets/images/picoles-galeria.avif" alt="picoles" role="presentation">
+            <img src="assets/images/picoles-galeria.avif" alt="picoles">
+        </a>
             <figcaption>
                 <h3>Picolés</h3>
                 <p>Conheça Mais</p>
             </figcaption>
-        </a>
     </figure>
 
     <!-- ITEM 3: PALETAS (CORRIGIDO) -->
     <figure class="produto">
         <a href="assets/paginas/paletas.html" style="display: block; text-decoration: none;" aria-label="Paletas: Conheça mais sobre os sabores cremosos">
-            <img src="assets/images/Palletas-galeria.avif" alt="paletas mexicanas" role="presentation">
+            <img src="assets/images/Palletas-galeria.avif" alt="paletas mexicanas">
+        </a>
             <figcaption>
                 <h3>Paletas</h3>
                 <p>Conheça Mais</p>
             </figcaption>
-        </a>
     </figure>
 
     <!-- ITEM 4: MILK SHAKE (CORRIGIDO) -->
     <figure class="produto">
         <a href="assets/paginas/outros.html#milkshake" style="display: block; text-decoration: none;" aria-label="Milk Shake: Veja as opções de sabores">
-            <img src="assets/images/milkshake-galeria.avif" alt="milk-shake (leite com sorvete)" role="presentation">
+            <img src="assets/images/milkshake-galeria.avif" alt="milk shake">
+        </a>
             <figcaption>
                 <h3>Milk Shake</h3>
                 <p>Conheça Mais</p>
             </figcaption>
-        </a>
     </figure>
 
     <!-- ITEM 5: PETIT GATEAU (CORRIGIDO) -->
     <figure class="produto">
         <a href="assets/paginas/outros.html#petit_gateau" style="display: block; text-decoration: none;" aria-label="Petit Gateau: Saiba mais sobre essa sobremesa">
-            <img src="assets/images/petit-gateau-galeria.avif" alt="petit gateau (bolo com sorvete)" role="presentation">
+            <img src="assets/images/petit-gateau-galeria.avif" alt="petit gateau">
+        </a>
             <figcaption>
                 <h3>Petit Gateau</h3>
                 <p>Conheça Mais</p>
             </figcaption>
-        </a>
     </figure>
 
     <!-- ITEM 6: BANANA SPLIT (CORRIGIDO) -->
     <figure class="produto">
         <a href="assets/paginas/outros.html#bananasplit" style="display: block; text-decoration: none;" aria-label="Banana Split: Descubra os detalhes dessa sobremesa">
-            <img src="assets/images/bananasplit-galeria.avif" alt="banana split sorvete com banana" role="presentation">
+            <img src="assets/images/bananasplit-galeria.avif" alt="banana split">
+        </a>
             <figcaption>
                 <h3>Banana Split</h3>
                 <p>Conheça Mais</p>
             </figcaption>
-        </a>
     </figure>
 
     <!-- ITEM 7: POTE DE 1,5 LITROS (CORRIGIDO) -->
     <figure class="produto">
         <a href="assets/paginas/outros.html#pote" style="display: block; text-decoration: none;" aria-label="Para Viagem: Conheça mais sobre Potes de 1,5 litros">
-            <img src="assets/images/para-viagem-galeria.avif" alt="pote para viagem" role="presentation">
+            <img src="assets/images/para-viagem-galeria.avif" alt="pote de 1,5 litros">
+        </a>
             <figcaption>
                 <h3>Pote de 1,5 litros</h3>
                 <p>Conheça Mais</p>
             </figcaption>
-        </a>
     </figure>
 
     <!-- ITEM 8: CASQUINHA E CASCÃO (CORRIGIDO) -->
     <figure class="produto">
         <a href="assets/paginas/outros.html#cascao" style="display: block; text-decoration: none;" aria-label="Casquinha e cascão: Veja opções de sabores">
-            <img src="assets/images/cascao-galeria.avif" alt="cascao de uma bola de sorvete" role="presentation">
+            <img src="assets/images/cascao-galeria.avif" alt="casquinha e cascão">
+        </a>
             <figcaption>
                 <h3>Casquinha e cascão</h3>
                 <p>Conheça Mais</p>
             </figcaption>
-        </a>
     </figure>
 
     <!-- ITEM 9: AÇAÍ (CORRIGIDO) -->
     <figure class="produto">
         <a href="assets/paginas/outros.html#acai" style="display: block; text-decoration: none;" aria-label="Açaí: Conheça mais sobre as opções de açaí">
-            <img src="assets/images/acai-galeria.avif" alt="açaí na tigela" role="presentation">
+            <img src="assets/images/acai-galeria.avif" alt="açaí">
+        </a>
             <figcaption>
                 <h3>Açaí</h3>
                 <p>Conheça Mais</p>
             </figcaption>
-        </a>
     </figure>
 
 
@@ -304,7 +305,7 @@
     <section id="sobre" class="sobre-container">
 
       <h2 class="sobre-container">Sobre</h2>
-      <img src="assets/images/nova_frente-da-gelateria-havana.avif" width="700" height="366" alt="Fachada de esquina da Sorveteria Havana, vista à noite." class="exterior">
+      <img src="assets/images/nova_frente-da-gelateria-havana.avif" width="700" height="366" alt="Fachada de esquina da Sorveteria Havana" class="exterior">
         
         <div class="texto-sobre texto-colapsado" id="textoSobre">
 
@@ -345,8 +346,8 @@
       <h2>Curiosidades</h2>
  
         <div class="motions">
-          <img src="assets/images/gelato.png" alt="imagem do gelato cremoso" class="motion">
-          <img src="assets/images/sorvete.png" alt="imagem do sorvete duro" class="motion">
+          <img src="assets/images/gelato.png" alt="GELATO" class="motion">
+          <img src="assets/images/sorvete.png" alt="SORVETE" class="motion">
         </div>
 
 <div>
@@ -407,7 +408,7 @@
    <footer>
     <div class="footer-container">
       <div class="footer-logo">
-        <img src="/assets/images/logo-havana.png" alt=" " role="presentation">
+        <img src="/assets/images/logo-havana.png" alt="">
       </div>
 
       <div class="footer-section">
