--- a/assets/paginas/picoles.html
+++ b/assets/paginas/picoles.html
@@ -19,13 +19,13 @@
      target="_blank" 
      rel="noopener noreferrer" 
      aria-label="Acesse nosso Instagram (abre em nova aba)">
-    <img src="/assets/images/instagram_fixo.svg" alt=" " role="presentation">
+    <img src="/assets/images/instagram_fixo.svg" alt="INSTAGRAM">
   </a>
 </div>
   <!-- Navbar desktop -->
 <header class="navbar">
     <div class="logo">
-      <img src="/assets/images/logo-havana.png" alt=" " role="presentation">
+      <img src="/assets/images/logo-havana.png" alt="">
     </div>
 
     <nav class="nav-links">
@@ -55,7 +55,7 @@
   <nav class="menu-responsivo">
     <div class="separando-logos">
       <div class="logo">
-        <img src="../images/logo-havana.png" alt=" " role="presentation">
+        <img src="../images/logo-havana.png" alt="">
       </div>
       <div class="menu" id="icon-menu"><i class="fas fa-bars"></i></div>
     </div>
@@ -69,10 +69,10 @@
               Cardápio <i class="fa fa-caret-down"></i>
             </button>
             <nav id="dropdown-mobile" class="dropdown-content">
-             <a href="assets/paginas/gelatos.html">Gelatos</a>
-              <a href="assets/paginas/picoles.html">Picolés</a>
-              <a href="assets/paginas/paletas.html">Paletas</a>
-              <a href="assets/paginas/outros.html">Outros</a>
+             <a href="/assets/paginas/gelatos.html">Gelatos</a>
+              <a href="#">Picolés</a>
+              <a href="/assets/paginas/paletas.html">Paletas</a>
+              <a href="/assets/paginas/outros.html">Outros</a>
             </nav>
           </div>
         </li>
@@ -246,7 +246,7 @@
   <footer>
     <div class="footer-container">
       <div class="footer-logo">
-        <img src="/assets/images/logo-havana.png" alt=" " role="presentation">
+        <img src="/assets/images/logo-havana.png" alt="">
       </div>
 
       <div class="footer-section">
